cabal-version:       2.2

name:                GameServer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/GameServer#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable GameServer
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Server,
                       Client,
                       Message,
                       Uno,
                       Types,
                       Gui
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       network >= 3.1,
                       bytestring >= 0.10,
                       containers,
                       mtl,
                       binary,
                       ansi-terminal, 
                       process,
                       MonadRandom,
                       sdl2,
                       text,
                       reactive-banana,
                       random
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
